Bug 1661852, honor printRange option and update startRange when the number of pages changes r=emalysz

Differential Revision: https://phabricator.services.mozilla.com/D89084